# openopc

./: .gitignore  LICENSE.txt  README.txt  Readme.rst  build-dist.bat  setup.cfg  setup.py
src/: Common.py  OpenOPC.py  OpenOPCDA.py  OpenOPCDAIO.py  OpenOPCDATools.py  OpenOPCService.py  SystemHealth.py  opc.py  test-requirements.txt  tox.ini
src/OpenOPC/: __init__.py  common.py  opc.py  opcda.py  opcdaio.py  opcdatools.py  systemhealth.py
src/OpenOPCService/: __init__.py  opcservice.py
src/tests/: conftest.py  test_client.py  test_gateway_service.py  test_open_client.py
