[metadata]
name = OpenOPC
version = attr: OpenOPC.__version__
description = OPC-DA (OLE for Process Control) toolkit for Python 3.7+
long_description = file: Readme.rst
long_description_content_type = text/x-rst
url = https://github.com/j3mg/openopc
author = j3mg
keywords = python, opc, opc-da, openopc
license = GPLv2
license_files = LICENSE.txt
classifiers =
    Development Status :: 1.5.0 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: OPC-DA
    Topic :: System :: Distributed Computing
    Topic :: System :: Networking

# Python 3.4 is allowed for Windows XP support but not recommended

[options]
include_package_data = False
python_requires = >=3.4
package_dir =
	=src
