[metadata]
name = OpenOPC-DA
version = attr: OpenOPC.__version__
description = OPC-DA (OLE for Process Control) toolkit for Python 3.7+
long_description = file: Readme.rst
long_description_content_type = text/x-rst
url = https://github.com/j3mg/openopc
author = j3mg
keywords = python, opc, opc-da, openopc
license = GPLv2
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Distributed Computing
    Topic :: System :: Networking

# Python 3.4 is allowed for Windows XP support but is not recommended

[options]
include_package_data = False
python_requires = >=3.4
package_dir =
	=src
